Fix arguments for FileUtils.copyRecursive()